dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  spec:
  rules:
    - host: socialo.pics
      http:
        paths:
          - path:
            backend:
              service:
                name: webapp-service
                port:
                  number: 8081
